emacs22-non-dfsg (22.2+2-1) unstable; urgency=low

  * Move mh-e.texi to emacs22-common because the license does appear to be
    DFSG compatible.  Thanks to Peter S Galbraith
    <psg@debian.org>. (closes: #433953)

 -- Rob Browning <rlb@defaultvalue.org>  Sun, 20 Apr 2008 13:34:03 -0700

emacs22-non-dfsg (22.2+1-2) unstable; urgency=low

  * Add Conflicts and Replaces emacs22-common (<< 22.2) to
    debian/control.in to handle move of dired-x.  Thanks to Sven Joachim
    <svenjoac@gmx.de>.  (closes: #475519)

  * Use "tail -n +N" rather than "tail +N" in debian/rules.  Thanks to
    John Zaitseff <J.Zaitseff@zap.org.au>.  (closes: #467525)

  * Fix quilt invocation to create README.Debian correctly.

 -- Rob Browning <rlb@defaultvalue.org>  Sun, 13 Apr 2008 16:35:04 -0700

emacs22-non-dfsg (22.2+1-1) unstable; urgency=low

  * New upstream release.

  * Move dired-x.texi to this package since the license has changed.

 -- Rob Browning <rlb@defaultvalue.org>  Thu, 10 Apr 2008 18:57:47 -0700

emacs22-non-dfsg (22.1+1-1) unstable; urgency=low

  * New upstream release. [rlb]

 -- Rob Browning <rlb@defaultvalue.org>  Fri, 06 Jul 2007 20:41:10 -0700

emacs22-non-dfsg (22.0.99+1-1) experimental; urgency=low

  * Update to 22.0.99.

 -- Rob Browning <rlb@defaultvalue.org>  Sun, 13 May 2007 11:26:42 -0700

emacs22-non-dfsg (22.0.95+1-1) unstable; urgency=low

  * New emacs22 packages.

 -- Rob Browning <rlb@defaultvalue.org>  Sun, 15 Apr 2007 16:32:16 -0700

emacs21-non-dfsg (21.4a+1-1) unstable; urgency=low

  * New package: in accordance with the recent General Resolution
    (http://www.debian.org/vote/2006/vote_001), move all non-DFSG files to
    new packages that will be included in Debian's non-free section.

 -- Rob Browning <rlb@defaultvalue.org>  Fri, 28 Jul 2006 22:37:16 -0700

Local Variables:
coding: utf-8
End: