@@ -6,7 +6,7 @@ debianized by Rob Browning <rlb@defaultvalue.org> on Tue, 16 Dec 1997
 
 This is the original source archive:
 
-  prep.ai.mit.edu:/pub/gnu/emacs/emacs-22.2+1.tar.gz
+  prep.ai.mit.edu:/pub/gnu/emacs/emacs-22.2.tar.gz
 
 Please see
 /usr/share/doc/emacs22-common-non-dfsg/README.Debian.gz
