@@ -6,7 +6,7 @@ debianized by Rob Browning <rlb@defaultvalue.org> on Tue, 16 Dec 1997
 
 This is the original source archive:
 
-  prep.ai.mit.edu:/pub/gnu/emacs/emacs-@DEBSRC_VERSION@.tar.gz
+  prep.ai.mit.edu:/pub/gnu/emacs/emacs-@UPSTREAM_VERSION@.tar.gz
 
 Please see
 /usr/share/doc/@DEB_FLAVOR@-common-non-dfsg/README.Debian.gz
